--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
                     <div class="flex justify-center items-center gap-2">
                         <div>
                             <i
-                        class="fa-solid fa-arrow-right bg-[#ABEF5F] h-8 w-8 inline-flex justify-center items-center rounded-2xl -rotate-45"></i>
+                                class="fa-solid fa-arrow-right bg-[#ABEF5F] h-8 w-8 inline-flex justify-center items-center rounded-2xl -rotate-45"></i>
                         </div>
-                        <div><h1 class="text-3xl font-bold pt-1">Rinterio</h1></div>
+                        <div>
+                            <h1 class="text-3xl font-bold pt-1">Rinterio</h1>
+                        </div>
                     </div>
 
                 </div>
@@ -101,28 +103,87 @@
         <section class="w-11/12 mx-auto">
             <div class="flex flex-col justify-center items-center">
                 <img src="./assets/banner.png" alt="">
-            <h1 class="text-center font-extrabold text-6xl w-6/7 py-6">A barn house of this design has a striking appearance</h1>
-            <p class="text-center w-3/4 text-[16px] pb-8">The barn house captivates with its blend of rustic charm and modern sophistication,
-                featuring weathered wood, sleek metal accents, and large windows that flood the space with natural
-                light.
-            </p>
-            <div class="pb-24">
-                <button class="bg-[#ccff91ef] rounded-3xl px-4 py-2 font-bold flex gap-2">
-                    <div>
-                        View Details
-                    </div>
-                    <div class="gap-1">
-                        <i
-                            class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-2xl -rotate-45 w-6 h-6 inline-flex justify-center items-center"></i>
-                    </div>
-                </button>
+                <h1 class="text-center font-extrabold lg:text-6xl text-4xl w-6/7 py-6">A barn house of this design has a
+                    striking appearance</h1>
+                <p class="text-center w-3/4 text-[16px] pb-8">The barn house captivates with its blend of rustic charm
+                    and modern sophistication,
+                    featuring weathered wood, sleek metal accents, and large windows that flood the space with natural
+                    light.
+                </p>
+                <div class="pb-24">
+                    <button class="bg-[#ccff91ef] rounded-3xl px-4 py-2 font-bold flex gap-2">
+                        <div>
+                            View Details
+                        </div>
+                        <div class="gap-1">
+                            <i
+                                class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-2xl -rotate-45 w-6 h-6 inline-flex justify-center items-center"></i>
+                        </div>
+                    </button>
 
+                </div>
             </div>
-        </div>
 
         </section>
     </header>
 
+    <!-- Design section starts here  -->
+    <section class="bg-[#F4F4F4] py-24">
+        <div class="w-11/12 mx-auto grid grid-cols-1 lg:grid-cols-2 gap-9">
+            <!-- Text-section -->
+            <div class="relative">
+                <div class="absolute -left-10 -top-14">
+                    <img src="./assets/Vector.png" alt="">
+                </div>
+                <div class="pb-4 mb-7">
+                    <button class="bg-white rounded-3xl px-4 py-2 font-semibold text-sm flex gap-2">
+                        <div class="gap-1">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
+                        <div>
+                            About Us
+                        </div>
+
+                    </button>
+                </div>
+                <h1 class="text-5xl font-bold mb-7">We design thoughtful, liveable spaces</h1>
+                <p class="mb-6">The barn house captivates with its blend of rustic charm and
+                    modern sophistication, featuring weathered wood, sleek metal accents.
+                </p>
+                <!-- card-1-->
+                <div class="bg-white flex  items-center px-5 py-6 rounded-xl mb-8">
+                    <!-- icon  -->
+                     <div class="">
+                        <img class="w-full h-full" src="./assets/commercial.png" alt="">
+                     </div>
+                     <!-- text  -->
+                      <div class="pl-7">
+                            <h2 class="text-xl font-bold mb-6">Commercial</h2>
+                            <p class="w-3/4 text-gray-500 text-sm">The barn house captivates with its blend of rustic charm and modern.</p>
+                      </div>
+                </div>
+                <!-- card-2-->
+                <div class="bg-white flex  items-center px-5 py-6 rounded-xl">
+                    <!-- icon  -->
+                     <div class="">
+                        <img src="./assets/residential.png" alt="">
+                     </div>
+                     <!-- text  -->
+                      <div class="pl-7">
+                            <h2 class="text-xl font-bold mb-6">Residential</h2>
+                            <p class="w-3/4 text-gray-500 text-sm">The barn house captivates with its blend of rustic charm and modern.</p>
+                      </div>
+                </div>
+
+            </div>
+
+            <!-- img-section -->
+            <div>
+                <img class="w-full h-full" src="./assets/Rectangle.png" alt="">
+            </div>
+        </div>
+
+    </section>
 
 
 
