--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                             <i class="fa-solid fa-arrow-right"></i>
                         </div>
                         <div>
-                            How we works
+                            Explore our Latest works
                         </div>
                     </button>
                 </div>
@@ -359,7 +359,8 @@
                 <!-- text-section  -->
                 <div class="flex-1 text-center mb-5 sm:mb-12">
                     <h1 class="text-4xl font-bold mb-6">Let’s Discuss Next Project</h1>
-                    <p class="text-gray-600 sm:w-3/5 mx-auto mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p class="text-gray-600 sm:w-3/5 mx-auto mb-8">The barn house captivates with its blend of rustic
+                        charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
             </div>
             <div class="grid sm:grid-cols-2 sm:gap-6">
@@ -395,6 +396,39 @@
         </div>
 
     </section>
+
+    <!-- Footer section starts here  -->
+    <footer class="footer footer-center bg-[#1C1C1C] text-base-content py-12">
+        <aside>
+            <div class="flex justify-center items-center gap-2 mb-3">
+                <div>
+                    <i
+                        class="fa-solid fa-arrow-right bg-[#ABEF5F] h-7 w-7 inline-flex justify-center items-center rounded-2xl -rotate-45"></i>
+                </div>
+                <div>
+                    <h1 class="text-3xl text-white font-bold pt-1">Rinterio</h1>
+                </div>
+            </div>
+            <p class="w-3/4 text-gray-500">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </aside>
+        <nav class="grid sm:grid-flow-col sm:text-sm text-xl gap-8 sm:gap-28 text-gray-300">
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">Services</a>
+            <a class="link link-hover">Portfolio</a>
+            <a class="link link-hover">Blogs</a>
+            <a class="link link-hover">Contact Us</a>
+        </nav>
+        <button class="bg-[#ABEF5F] w-3/4 sm:w-[148px] justify-center items-center rounded-3xl px-3 py-2 font-bold flex gap-2">
+            <div>
+                Book Consult
+            </div>
+            <div class="gap-1">
+                <i
+                    class="fa-solid fa-arrow-right text-white bg-black rounded-2xl -rotate-45 w-6 h-6 inline-flex justify-center items-center"></i>
+            </div>
+        </button>
+
+    </footer>
 
 </body>
 
