--- a/index.html
+++ b/index.html
@@ -341,6 +341,62 @@
         </div>
     </section>
 
+    <!-- Extra new section  -->
+    <section>
+        <div class="w-11/12 mx-auto mb-5 sm:mb-16">
+            <div>
+                <div class="mb-4 flex items-center justify-center">
+                    <button class="bg-[#ABEF5F33] rounded-3xl px-4 py-2 font-semibold text-sm flex gap-2">
+                        <div class="gap-1">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
+                        <div>
+                            Explore our team
+                        </div>
+                    </button>
+                </div>
+                <!-- text-section  -->
+                <div class="flex-1 text-center mb-5 sm:mb-12">
+                    <h1 class="text-4xl font-bold mb-6">Our Team Members</h1>
+                    <p class="text-gray-600  w-3/4 sm:w-3/5 mx-auto mb-8">The barn house captivates with its blend of
+                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+            </div>
+            <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+                <div class="card bg-base-100 w-96 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img class="h-40 w-40 rounded-full" src="./assets/pro-img-1.png" alt="">
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">Jack</h2>
+                        <p>CEO</p>
+                        <p class="text-gray-500 w-2/3">Hi! My name is Jack. I'm CEO of this company</p>
+                    </div>
+                </div>
+                <div class="card bg-base-100 w-96 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img class="h-40 w-40 rounded-full" src="./assets/pro-img-2.jpg" alt="">
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">Harry</h2>
+                        <p>Manager</p>
+                        <p class="text-gray-500 w-2/3">Hi! My name is Harry. I'm Manager of this company</p>
+                    </div>
+                </div>
+                <div class="card bg-base-100 w-96 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img class="h-40 w-40 rounded-full" src="./assets/pro-img-3.jpg" alt="">
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">Noah</h2>
+                        <p>Architect</p>
+                        <p class="text-gray-500 w-2/3">Hi! My name is Noah. I'm Architect of this company</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Next project section  -->
     <section class="w-full bg-inputBg bg-no-repeat bg-cover">
@@ -409,7 +465,8 @@
                     <h1 class="text-3xl text-white font-bold pt-1">Rinterio</h1>
                 </div>
             </div>
-            <p class="w-3/4 text-gray-500">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="w-3/4 text-gray-500">The barn house captivates with its blend of rustic charm and modern
+                sophistication, featuring weathered wood, sleek metal accents.</p>
         </aside>
         <nav class="grid sm:grid-flow-col sm:text-sm text-xl gap-8 sm:gap-28 text-gray-300">
             <a class="link link-hover">Home</a>
@@ -418,7 +475,8 @@
             <a class="link link-hover">Blogs</a>
             <a class="link link-hover">Contact Us</a>
         </nav>
-        <button class="bg-[#ABEF5F] w-3/4 sm:w-[148px] justify-center items-center rounded-3xl px-3 py-2 font-bold flex gap-2">
+        <button
+            class="bg-[#ABEF5F] w-3/4 sm:w-[148px] justify-center items-center rounded-3xl px-3 py-2 font-bold flex gap-2">
             <div>
                 Book Consult
             </div>
