Extra section added done

--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                         rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
             </div>
-            <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
-                <div class="card bg-base-100 w-96 shadow-xl">
+            <div class="grid grid-cols-1 sm:grid-cols-3 gap-14">
+                <div class="card bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img class="h-40 w-40 rounded-full" src="./assets/pro-img-1.png" alt="">
                     </figure>
@@ -373,7 +373,7 @@
                         <p class="text-gray-500 w-2/3">Hi! My name is Jack. I'm CEO of this company</p>
                     </div>
                 </div>
-                <div class="card bg-base-100 w-96 shadow-xl">
+                <div class="card bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img class="h-40 w-40 rounded-full" src="./assets/pro-img-2.jpg" alt="">
                     </figure>
@@ -383,7 +383,7 @@
                         <p class="text-gray-500 w-2/3">Hi! My name is Harry. I'm Manager of this company</p>
                     </div>
                 </div>
-                <div class="card bg-base-100 w-96 shadow-xl">
+                <div class="card bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img class="h-40 w-40 rounded-full" src="./assets/pro-img-3.jpg" alt="">
                     </figure>
